2019-12-11  Omar Sandoval  <osandov@fb.com>

	* Makefile.am (i386_lex_CFLAGS): Add -Wno-implicit-fallthrough.

2019-10-17  Mark Wielaard  <mark@klomp.org>

	* i386_data.h (FCT_sel): Check for param_start + 2 >= end instead
	of just >.
	* i386_disasm.c (i386_disasm): Check param_start < end. Don't
	assert, but assign INVALID to str. Make sure we get past any
	unrecognized opcode.

2019-09-07  Mark Wielaard  <mark@klomp.org>

	* riscv_disasm.c (riscv_disasm): Use UINT64_C to make calculation
	unsigned.

2019-07-05  Omar Sandoval  <osandov@fb.com>

	* Makefile.am: Combine libcpu_{i386,x86_64,bpf}.a into libcpu.a.
	Make libcpu.a non-PIC by default.
	Add libcpu_pic.a.

2018-11-04  Mark Wielaard  <mark@klomp.org>

	* bpf_disasm.c (bpf_disasm): Recognize BPF_JLT, BPF_JLE, BPF_JSLT
	and BPF_JSLE.

2018-02-09  Joshua Watt  <JPEWhacker@gmail.com>

	* i386_disasm.c (i386_disasm): Use FALLTHOUGH macro instead of
	comment.

2017-08-18  Ulf Hermann  <ulf.hermann@qt.io>

	* memory-access.h: Use attribute_packed.

2017-02-27  Ulf Hermann  <ulf.hermann@qt.io>

	* Makefile.am: Use fpic_CFLAGS.

2017-07-18  Mark Wielaard  <mark@klomp.org>

	* Makefile.am: Don't check HAVE_LINUX_BPF_H, just define libcpu_bpf.
	* bpf_disasm.c: Include bpf.h instead of linux/bpf.h. Don't define
	BPF_PSEUDO_MAP_FD.

2017-04-20  Ulf Hermann <ulf.hermann@qt.io>

	* Makefile.am: Add EXEEXT to gendis.

2017-04-20  Ulf Hermann  <ulf.hermann@qt.io>

	* i386_parse.y: Eliminate comparison_fn_t.

2016-11-02  Mark Wielaard  <mjw@redhat.com>

	* i386_disasm.c (i386_disasm): Add fallthrough comment.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* i386_lex.l: Remove system.h include, add libeu.h include.
	* i386_parse.y: Remove sys/param.h include, add libeu.h include.
	* i386_disasm.c: Remove sys/param.h.

2016-09-05  Mark Wielaard  <mjw@redhat.com>

	* bpf_disasm.c: Define BPF_PSEUDO_MAP_FD if undefined.

2016-08-10  Richard Henderson  <rth@redhat.com>
